closes bpo-36951: Correct some types in the type_members struct in typeobject.c. (GH-13403)